[package]
name = "libunwind-rs"
version = "0.3.1"
authors = ["Andrey Fedotov <fedotoff@ispras.ru>"]
edition = "2018"
description = "High-level bindings for the libunwind library"
readme = "README.md"
keywords = [ "stackunwind", "backtrace","stacktrace","coredump"]
repository = "https://github.com/xcoldhandsx/libunwind-rs.git"
homepage = "https://github.com/xcoldhandsx/libunwind-rs.git"
license = "MIT"
exclude = ["/data"]

[features]
ptrace = ["libunwind-sys/ptrace"]

[dependencies]
libc = "0.2.66"
foreign-types = "0.5.0"
num-traits = "0.2"
num-derive = "0.3"
libunwind-sys = "0.5.1"

# For some reason, the version of `libunwind-sys` on crates.io depends on v0.52.0 of `bindgen`,
# despite the version on GitHub depending on v0.64.0. `bindgen` v0.52.0 spits out errors like these,
# so we need to use a newer version of it:
# https://github.com/oxidize-rb/rb-sys/issues/204
[patch.crates-io]
libunwind-sys = { git = "https://github.com/anfedotoff/libunwind-sys", branch = "master" }
